INE5426/Compiladores/parser.out
Created by PLY (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAM
Rule 1     empty -> <empty>
Rule 2     new_scope -> <empty>
Rule 3     new_scope_loop -> <empty>
Rule 4     PROGRAM -> new_scope STATEMENT
Rule 5     PROGRAM -> new_scope FUNCLIST
Rule 6     PROGRAM -> empty
Rule 7     FUNCLIST -> FUNCDEF FUNCLISTAUX
Rule 8     FUNCLISTAUX -> FUNCLIST
Rule 9     FUNCLISTAUX -> empty
Rule 10    FUNCDEF -> DEF IDENT new_scope LPARENTHESIS PARAMLIST RPARENTHESIS LCURLYBRACKET STATELIST RCURLYBRACKET
Rule 11    PARAMLIST -> DATATYPE IDENT PARAMLISTAUX
Rule 12    PARAMLIST -> empty
Rule 13    PARAMLISTAUX -> COMMA PARAMLIST
Rule 14    PARAMLISTAUX -> empty
Rule 15    DATATYPE -> INT
Rule 16    DATATYPE -> FLOAT
Rule 17    DATATYPE -> STRING
Rule 18    STATEMENT -> VARDECL SEMICOLON
Rule 19    STATEMENT -> ATRIBSTAT SEMICOLON
Rule 20    STATEMENT -> PRINTSTAT SEMICOLON
Rule 21    STATEMENT -> READSTAT SEMICOLON
Rule 22    STATEMENT -> RETURNSTAT SEMICOLON
Rule 23    STATEMENT -> IFSTAT
Rule 24    STATEMENT -> FORSTAT
Rule 25    STATEMENT -> new_scope LCURLYBRACKET STATELIST RCURLYBRACKET
Rule 26    STATEMENT -> BREAK SEMICOLON
Rule 27    STATEMENT -> SEMICOLON
Rule 28    VARDECL -> DATATYPE IDENT OPTIONAL_VEC
Rule 29    OPTIONAL_VEC -> LBRACKET INT_CONSTANT RBRACKET OPTIONAL_VEC
Rule 30    OPTIONAL_VEC -> empty
Rule 31    ATRIBSTAT -> LVALUE ASSIGNMENT R_ATRIB
Rule 32    R_ATRIB -> EXPRESSION
Rule 33    R_ATRIB -> ALLOCEXPRESSION
Rule 34    R_ATRIB -> FUNCCALL
Rule 35    FUNCCALL -> IDENT LPARENTHESIS PARAMLISTCALL RPARENTHESIS
Rule 36    PARAMLISTCALL -> IDENT PARAMLISTCALLAUX
Rule 37    PARAMLISTCALLAUX -> COMMA PARAMLISTCALL
Rule 38    PARAMLISTCALLAUX -> empty
Rule 39    PRINTSTAT -> PRINT EXPRESSION
Rule 40    READSTAT -> READ LVALUE
Rule 41    RETURNSTAT -> RETURN
Rule 42    IFSTAT -> IF LPARENTHESIS EXPRESSION RPARENTHESIS new_scope STATEMENT IFAUX
Rule 43    IFAUX -> ELSE new_scope STATEMENT
Rule 44    IFAUX -> empty
Rule 45    FORSTAT -> FOR LPARENTHESIS ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESIS new_scope_loop STATEMENT
Rule 46    STATELIST -> STATEMENT OPT_STATELIST
Rule 47    OPT_STATELIST -> STATELIST
Rule 48    OPT_STATELIST -> empty
Rule 49    ALLOCEXPRESSION -> NEW DATATYPE LBRACKET NUMEXPRESSION RBRACKET OPT_NUMEXPRESSION
Rule 50    OPT_NUMEXPRESSION -> LBRACKET NUMEXPRESSION RBRACKET OPT_NUMEXPRESSION
Rule 51    OPT_NUMEXPRESSION -> empty
Rule 52    EXPRESSION -> NUMEXPRESSION OPT_EXPRESSION
Rule 53    OPT_EXPRESSION -> REL_OP NUMEXPRESSION
Rule 54    OPT_EXPRESSION -> empty
Rule 55    REL_OP -> LESSTHAN
Rule 56    REL_OP -> GREATERTHAN
Rule 57    REL_OP -> LESSEQUAL
Rule 58    REL_OP -> GREATEREQUAL
Rule 59    REL_OP -> EQUAL
Rule 60    REL_OP -> DIFFERENT
Rule 61    NUMEXPRESSION -> TERM OTHERTERM
Rule 62    OTHERTERM -> PLUS_OR_MINUS TERM OTHERTERM
Rule 63    OTHERTERM -> empty
Rule 64    PLUS_OR_MINUS -> PLUS
Rule 65    PLUS_OR_MINUS -> MINUS
Rule 66    TERM -> UNARYEXPR OPT_UNARYEXPR
Rule 67    OPT_UNARYEXPR -> OPERATOR UNARYEXPR OPT_UNARYEXPR
Rule 68    OPT_UNARYEXPR -> empty
Rule 69    OPERATOR -> MULT
Rule 70    OPERATOR -> MOD
Rule 71    OPERATOR -> DIV
Rule 72    UNARYEXPR -> PLUS_OR_MINUS FACTOR
Rule 73    UNARYEXPR -> FACTOR
Rule 74    FACTOR -> INT_CONSTANT
Rule 75    FACTOR -> FLOAT_CONSTANT
Rule 76    FACTOR -> STRING_CONSTANT
Rule 77    FACTOR -> NULL
Rule 78    FACTOR -> LVALUE
Rule 79    FACTOR -> LPARENTHESIS NUMEXPRESSION RPARENTHESIS
Rule 80    LVALUE -> IDENT OPT_NUMEXPRESSION

Terminals, with rules where they appear

ASSIGNMENT           : 31
BREAK                : 26
COMMA                : 13 37
DEF                  : 10
DIFFERENT            : 60
DIV                  : 71
ELSE                 : 43
EQUAL                : 59
FLOAT                : 16
FLOAT_CONSTANT       : 75
FOR                  : 45
GREATEREQUAL         : 58
GREATERTHAN          : 56
IDENT                : 10 11 28 35 36 80
IF                   : 42
INT                  : 15
INT_CONSTANT         : 29 74
LBRACKET             : 29 49 50
LCURLYBRACKET        : 10 25
LESSEQUAL            : 57
LESSTHAN             : 55
LPARENTHESIS         : 10 35 42 45 79
MINUS                : 65
MOD                  : 70
MULT                 : 69
NEW                  : 49
NULL                 : 77
PLUS                 : 64
PRINT                : 39
RBRACKET             : 29 49 50
RCURLYBRACKET        : 10 25
READ                 : 40
RETURN               : 41
RPARENTHESIS         : 10 35 42 45 79
SEMICOLON            : 18 19 20 21 22 26 27 45 45
STRING               : 17
STRING_CONSTANT      : 76
error                : 

Nonterminals, with rules where they appear

ALLOCEXPRESSION      : 33
ATRIBSTAT            : 19 45 45
DATATYPE             : 11 28 49
EXPRESSION           : 32 39 42 45
FACTOR               : 72 73
FORSTAT              : 24
FUNCCALL             : 34
FUNCDEF              : 7
FUNCLIST             : 5 8
FUNCLISTAUX          : 7
IFAUX                : 42
IFSTAT               : 23
LVALUE               : 31 40 78
NUMEXPRESSION        : 49 50 52 53 79
OPERATOR             : 67
OPTIONAL_VEC         : 28 29
OPT_EXPRESSION       : 52
OPT_NUMEXPRESSION    : 49 50 80
OPT_STATELIST        : 46
OPT_UNARYEXPR        : 66 67
OTHERTERM            : 61 62
PARAMLIST            : 10 13
PARAMLISTAUX         : 11
PARAMLISTCALL        : 35 37
PARAMLISTCALLAUX     : 36
PLUS_OR_MINUS        : 62 72
PRINTSTAT            : 20
PROGRAM              : 0
READSTAT             : 21
REL_OP               : 53
RETURNSTAT           : 22
R_ATRIB              : 31
STATELIST            : 10 25 47
STATEMENT            : 4 42 43 45 46
TERM                 : 61 62
UNARYEXPR            : 66 67
VARDECL              : 18
empty                : 6 9 12 14 30 38 44 48 51 54 63 68
new_scope            : 4 5 10 25 42 43
new_scope_loop       : 45


state 0

    (0) S' -> . PROGRAM
    (4) PROGRAM -> . new_scope STATEMENT
    (5) PROGRAM -> . new_scope FUNCLIST
    (6) PROGRAM -> . empty
    (2) new_scope -> .
    (1) empty -> .

    BREAK           reduce using rule 2 (new_scope -> .)
    SEMICOLON       reduce using rule 2 (new_scope -> .)
    PRINT           reduce using rule 2 (new_scope -> .)
    READ            reduce using rule 2 (new_scope -> .)
    RETURN          reduce using rule 2 (new_scope -> .)
    IF              reduce using rule 2 (new_scope -> .)
    FOR             reduce using rule 2 (new_scope -> .)
    DEF             reduce using rule 2 (new_scope -> .)
    INT             reduce using rule 2 (new_scope -> .)
    FLOAT           reduce using rule 2 (new_scope -> .)
    STRING          reduce using rule 2 (new_scope -> .)
    IDENT           reduce using rule 2 (new_scope -> .)
    LCURLYBRACKET   reduce using rule 2 (new_scope -> .)
    $end            reduce using rule 1 (empty -> .)

    PROGRAM                        shift and go to state 1
    new_scope                      shift and go to state 2
    empty                          shift and go to state 3

state 1

    (0) S' -> PROGRAM .



state 2

    (4) PROGRAM -> new_scope . STATEMENT
    (5) PROGRAM -> new_scope . FUNCLIST
    (18) STATEMENT -> . VARDECL SEMICOLON
    (19) STATEMENT -> . ATRIBSTAT SEMICOLON
    (20) STATEMENT -> . PRINTSTAT SEMICOLON
    (21) STATEMENT -> . READSTAT SEMICOLON
    (22) STATEMENT -> . RETURNSTAT SEMICOLON
    (23) STATEMENT -> . IFSTAT
    (24) STATEMENT -> . FORSTAT
    (25) STATEMENT -> . new_scope LCURLYBRACKET STATELIST RCURLYBRACKET
    (26) STATEMENT -> . BREAK SEMICOLON
    (27) STATEMENT -> . SEMICOLON
    (7) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (28) VARDECL -> . DATATYPE IDENT OPTIONAL_VEC
    (31) ATRIBSTAT -> . LVALUE ASSIGNMENT R_ATRIB
    (39) PRINTSTAT -> . PRINT EXPRESSION
    (40) READSTAT -> . READ LVALUE
    (41) RETURNSTAT -> . RETURN
    (42) IFSTAT -> . IF LPARENTHESIS EXPRESSION RPARENTHESIS new_scope STATEMENT IFAUX
    (45) FORSTAT -> . FOR LPARENTHESIS ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESIS new_scope_loop STATEMENT
    (2) new_scope -> .
    (10) FUNCDEF -> . DEF IDENT new_scope LPARENTHESIS PARAMLIST RPARENTHESIS LCURLYBRACKET STATELIST RCURLYBRACKET
    (15) DATATYPE -> . INT
    (16) DATATYPE -> . FLOAT
    (17) DATATYPE -> . STRING
    (80) LVALUE -> . IDENT OPT_NUMEXPRESSION

    BREAK           shift and go to state 15
    SEMICOLON       shift and go to state 8
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    RETURN          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LCURLYBRACKET   reduce using rule 2 (new_scope -> .)
    DEF             shift and go to state 25
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    IDENT           shift and go to state 18

    new_scope                      shift and go to state 4
    STATEMENT                      shift and go to state 5
    FUNCLIST                       shift and go to state 6
    VARDECL                        shift and go to state 7
    ATRIBSTAT                      shift and go to state 9
    PRINTSTAT                      shift and go to state 10
    READSTAT                       shift and go to state 11
    RETURNSTAT                     shift and go to state 12
    IFSTAT                         shift and go to state 13
    FORSTAT                        shift and go to state 14
    FUNCDEF                        shift and go to state 16
    DATATYPE                       shift and go to state 17
    LVALUE                         shift and go to state 19

state 3

    (6) PROGRAM -> empty .

    $end            reduce using rule 6 (PROGRAM -> empty .)


state 4

    (25) STATEMENT -> new_scope . LCURLYBRACKET STATELIST RCURLYBRACKET

    LCURLYBRACKET   shift and go to state 29


state 5

    (4) PROGRAM -> new_scope STATEMENT .

    $end            reduce using rule 4 (PROGRAM -> new_scope STATEMENT .)


state 6

    (5) PROGRAM -> new_scope FUNCLIST .

    $end            reduce using rule 5 (PROGRAM -> new_scope FUNCLIST .)


state 7

    (18) STATEMENT -> VARDECL . SEMICOLON

    SEMICOLON       shift and go to state 30


state 8

    (27) STATEMENT -> SEMICOLON .

    $end            reduce using rule 27 (STATEMENT -> SEMICOLON .)
    BREAK           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    SEMICOLON       reduce using rule 27 (STATEMENT -> SEMICOLON .)
    PRINT           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    READ            reduce using rule 27 (STATEMENT -> SEMICOLON .)
    RETURN          reduce using rule 27 (STATEMENT -> SEMICOLON .)
    IF              reduce using rule 27 (STATEMENT -> SEMICOLON .)
    FOR             reduce using rule 27 (STATEMENT -> SEMICOLON .)
    INT             reduce using rule 27 (STATEMENT -> SEMICOLON .)
    FLOAT           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    STRING          reduce using rule 27 (STATEMENT -> SEMICOLON .)
    IDENT           reduce using rule 27 (STATEMENT -> SEMICOLON .)
    LCURLYBRACKET   reduce using rule 27 (STATEMENT -> SEMICOLON .)
    RCURLYBRACKET   reduce using rule 27 (STATEMENT -> SEMICOLON .)
    ELSE            reduce using rule 27 (STATEMENT -> SEMICOLON .)


state 9

    (19) STATEMENT -> ATRIBSTAT . SEMICOLON

    SEMICOLON       shift and go to state 31


state 10

    (20) STATEMENT -> PRINTSTAT . SEMICOLON

    SEMICOLON       shift and go to state 32


state 11

    (21) STATEMENT -> READSTAT . SEMICOLON

    SEMICOLON       shift and go to state 33


state 12

    (22) STATEMENT -> RETURNSTAT . SEMICOLON

    SEMICOLON       shift and go to state 34


state 13

    (23) STATEMENT -> IFSTAT .

    $end            reduce using rule 23 (STATEMENT -> IFSTAT .)
    BREAK           reduce using rule 23 (STATEMENT -> IFSTAT .)
    SEMICOLON       reduce using rule 23 (STATEMENT -> IFSTAT .)
    PRINT           reduce using rule 23 (STATEMENT -> IFSTAT .)
    READ            reduce using rule 23 (STATEMENT -> IFSTAT .)
    RETURN          reduce using rule 23 (STATEMENT -> IFSTAT .)
    IF              reduce using rule 23 (STATEMENT -> IFSTAT .)
    FOR             reduce using rule 23 (STATEMENT -> IFSTAT .)
    INT             reduce using rule 23 (STATEMENT -> IFSTAT .)
    FLOAT           reduce using rule 23 (STATEMENT -> IFSTAT .)
    STRING          reduce using rule 23 (STATEMENT -> IFSTAT .)
    IDENT           reduce using rule 23 (STATEMENT -> IFSTAT .)
    LCURLYBRACKET   reduce using rule 23 (STATEMENT -> IFSTAT .)
    RCURLYBRACKET   reduce using rule 23 (STATEMENT -> IFSTAT .)
    ELSE            reduce using rule 23 (STATEMENT -> IFSTAT .)


state 14

    (24) STATEMENT -> FORSTAT .

    $end            reduce using rule 24 (STATEMENT -> FORSTAT .)
    BREAK           reduce using rule 24 (STATEMENT -> FORSTAT .)
    SEMICOLON       reduce using rule 24 (STATEMENT -> FORSTAT .)
    PRINT           reduce using rule 24 (STATEMENT -> FORSTAT .)
    READ            reduce using rule 24 (STATEMENT -> FORSTAT .)
    RETURN          reduce using rule 24 (STATEMENT -> FORSTAT .)
    IF              reduce using rule 24 (STATEMENT -> FORSTAT .)
    FOR             reduce using rule 24 (STATEMENT -> FORSTAT .)
    INT             reduce using rule 24 (STATEMENT -> FORSTAT .)
    FLOAT           reduce using rule 24 (STATEMENT -> FORSTAT .)
    STRING          reduce using rule 24 (STATEMENT -> FORSTAT .)
    IDENT           reduce using rule 24 (STATEMENT -> FORSTAT .)
    LCURLYBRACKET   reduce using rule 24 (STATEMENT -> FORSTAT .)
    RCURLYBRACKET   reduce using rule 24 (STATEMENT -> FORSTAT .)
    ELSE            reduce using rule 24 (STATEMENT -> FORSTAT .)


state 15

    (26) STATEMENT -> BREAK . SEMICOLON

    SEMICOLON       shift and go to state 35


state 16

    (7) FUNCLIST -> FUNCDEF . FUNCLISTAUX
    (8) FUNCLISTAUX -> . FUNCLIST
    (9) FUNCLISTAUX -> . empty
    (7) FUNCLIST -> . FUNCDEF FUNCLISTAUX
    (1) empty -> .
    (10) FUNCDEF -> . DEF IDENT new_scope LPARENTHESIS PARAMLIST RPARENTHESIS LCURLYBRACKET STATELIST RCURLYBRACKET

    $end            reduce using rule 1 (empty -> .)
    DEF             shift and go to state 25

    FUNCDEF                        shift and go to state 16
    FUNCLISTAUX                    shift and go to state 36
    FUNCLIST                       shift and go to state 37
    empty                          shift and go to state 38

state 17

    (28) VARDECL -> DATATYPE . IDENT OPTIONAL_VEC

    IDENT           shift and go to state 39


state 18

    (80) LVALUE -> IDENT . OPT_NUMEXPRESSION
    (50) OPT_NUMEXPRESSION -> . LBRACKET NUMEXPRESSION RBRACKET OPT_NUMEXPRESSION
    (51) OPT_NUMEXPRESSION -> . empty
    (1) empty -> .

    LBRACKET        shift and go to state 41
    ASSIGNMENT      reduce using rule 1 (empty -> .)
    MULT            reduce using rule 1 (empty -> .)
    MOD             reduce using rule 1 (empty -> .)
    DIV             reduce using rule 1 (empty -> .)
    PLUS            reduce using rule 1 (empty -> .)
    MINUS           reduce using rule 1 (empty -> .)
    LESSTHAN        reduce using rule 1 (empty -> .)
    GREATERTHAN     reduce using rule 1 (empty -> .)
    LESSEQUAL       reduce using rule 1 (empty -> .)
    GREATEREQUAL    reduce using rule 1 (empty -> .)
    EQUAL           reduce using rule 1 (empty -> .)
    DIFFERENT       reduce using rule 1 (empty -> .)
    SEMICOLON       reduce using rule 1 (empty -> .)
    RBRACKET        reduce using rule 1 (empty -> .)
    RPARENTHESIS    reduce using rule 1 (empty -> .)

    OPT_NUMEXPRESSION              shift and go to state 40
    empty                          shift and go to state 42

state 19

    (31) ATRIBSTAT -> LVALUE . ASSIGNMENT R_ATRIB

    ASSIGNMENT      shift and go to state 43


state 20

    (39) PRINTSTAT -> PRINT . EXPRESSION
    (52) EXPRESSION -> . NUMEXPRESSION OPT_EXPRESSION
    (61) NUMEXPRESSION -> . TERM OTHERTERM
    (66) TERM -> . UNARYEXPR OPT_UNARYEXPR
    (72) UNARYEXPR -> . PLUS_OR_MINUS FACTOR
    (73) UNARYEXPR -> . FACTOR
    (64) PLUS_OR_MINUS -> . PLUS
    (65) PLUS_OR_MINUS -> . MINUS
    (74) FACTOR -> . INT_CONSTANT
    (75) FACTOR -> . FLOAT_CONSTANT
    (76) FACTOR -> . STRING_CONSTANT
    (77) FACTOR -> . NULL
    (78) FACTOR -> . LVALUE
    (79) FACTOR -> . LPARENTHESIS NUMEXPRESSION RPARENTHESIS
    (80) LVALUE -> . IDENT OPT_NUMEXPRESSION

    PLUS            shift and go to state 50
    MINUS           shift and go to state 51
    INT_CONSTANT    shift and go to state 52
    FLOAT_CONSTANT  shift and go to state 53
    STRING_CONSTANT shift and go to state 54
    NULL            shift and go to state 55
    LPARENTHESIS    shift and go to state 57
    IDENT           shift and go to state 18

    EXPRESSION                     shift and go to state 44
    NUMEXPRESSION                  shift and go to state 45
    TERM                           shift and go to state 46
    UNARYEXPR                      shift and go to state 47
    PLUS_OR_MINUS                  shift and go to state 48
    FACTOR                         shift and go to state 49
    LVALUE                         shift and go to state 56

state 21

    (40) READSTAT -> READ . LVALUE
    (80) LVALUE -> . IDENT OPT_NUMEXPRESSION

    IDENT           shift and go to state 18

    LVALUE                         shift and go to state 58

state 22

    (41) RETURNSTAT -> RETURN .

    SEMICOLON       reduce using rule 41 (RETURNSTAT -> RETURN .)


state 23

    (42) IFSTAT -> IF . LPARENTHESIS EXPRESSION RPARENTHESIS new_scope STATEMENT IFAUX

    LPARENTHESIS    shift and go to state 59


state 24

    (45) FORSTAT -> FOR . LPARENTHESIS ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESIS new_scope_loop STATEMENT

    LPARENTHESIS    shift and go to state 60


state 25

    (10) FUNCDEF -> DEF . IDENT new_scope LPARENTHESIS PARAMLIST RPARENTHESIS LCURLYBRACKET STATELIST RCURLYBRACKET

    IDENT           shift and go to state 61


state 26

    (15) DATATYPE -> INT .

    IDENT           reduce using rule 15 (DATATYPE -> INT .)
    LBRACKET        reduce using rule 15 (DATATYPE -> INT .)


state 27

    (16) DATATYPE -> FLOAT .

    IDENT           reduce using rule 16 (DATATYPE -> FLOAT .)
    LBRACKET        reduce using rule 16 (DATATYPE -> FLOAT .)


state 28

    (17) DATATYPE -> STRING .

    IDENT           reduce using rule 17 (DATATYPE -> STRING .)
    LBRACKET        reduce using rule 17 (DATATYPE -> STRING .)


state 29

    (25) STATEMENT -> new_scope LCURLYBRACKET . STATELIST RCURLYBRACKET
    (46) STATELIST -> . STATEMENT OPT_STATELIST
    (18) STATEMENT -> . VARDECL SEMICOLON
    (19) STATEMENT -> . ATRIBSTAT SEMICOLON
    (20) STATEMENT -> . PRINTSTAT SEMICOLON
    (21) STATEMENT -> . READSTAT SEMICOLON
    (22) STATEMENT -> . RETURNSTAT SEMICOLON
    (23) STATEMENT -> . IFSTAT
    (24) STATEMENT -> . FORSTAT
    (25) STATEMENT -> . new_scope LCURLYBRACKET STATELIST RCURLYBRACKET
    (26) STATEMENT -> . BREAK SEMICOLON
    (27) STATEMENT -> . SEMICOLON
    (28) VARDECL -> . DATATYPE IDENT OPTIONAL_VEC
    (31) ATRIBSTAT -> . LVALUE ASSIGNMENT R_ATRIB
    (39) PRINTSTAT -> . PRINT EXPRESSION
    (40) READSTAT -> . READ LVALUE
    (41) RETURNSTAT -> . RETURN
    (42) IFSTAT -> . IF LPARENTHESIS EXPRESSION RPARENTHESIS new_scope STATEMENT IFAUX
    (45) FORSTAT -> . FOR LPARENTHESIS ATRIBSTAT SEMICOLON EXPRESSION SEMICOLON ATRIBSTAT RPARENTHESIS new_scope_loop STATEMENT
    (2) new_scope -> .
    (15) DATATYPE -> . INT
    (16) DATATYPE -> . FLOAT
    (17) DATATYPE -> . STRING
    (80) LVALUE -> . IDENT OPT_NUMEXPRESSION

    BREAK           shift and go to state 15
    SEMICOLON       shift and go to state 8
    PRINT           shift and go to state 20
    READ            shift and go to state 21
    RETURN          shift and go to state 22
    IF              shift and go to state 23
    FOR             shift and go to state 24
    LCURLYBRACKET   reduce using rule 2 (new_scope -> .)
    INT             shift and go to state 26
    FLOAT           shift and go to state 27
    STRING          shift and go to state 28
    IDENT           shift and go to state 18

    new_scope                      shift and go to state 4
    STATELIST                      shift and go to state 62
    STATEMENT                      shift and go to state 63
    VARDECL                        shift and go to state 7
    ATRIBSTAT                      shift and go to state 9
    PRINTSTAT                      shift and go to state 10
    READSTAT                       shift and go to state 11
    RETURNSTAT                     shift and go to state 12
    IFSTAT                         shift and go to state 13
    FORSTAT                        shift and go to state 14
    DATATYPE                       shift and go to state 17
    LVALUE                         shift and go to state 19

state 30

    (18) STATEMENT -> VARDECL SEMICOLON .

    $end            reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    BREAK           reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    SEMICOLON       reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    PRINT           reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    READ            reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    RETURN          reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    IF              reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    FOR             reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    INT             reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    FLOAT           reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    STRING          reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    IDENT           reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    LCURLYBRACKET   reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    RCURLYBRACKET   reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)
    ELSE            reduce using rule 18 (STATEMENT -> VARDECL SEMICOLON .)


state 31

    (19) STATEMENT -> ATRIBSTAT SEMICOLON .

    $end            reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    BREAK           reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    PRINT           reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    READ            reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RETURN          reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IF              reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FOR             reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    INT             reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    FLOAT           reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    STRING          reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    IDENT           reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    LCURLYBRACKET   reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    RCURLYBRACKET   reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)
    ELSE            reduce using rule 19 (STATEMENT -> ATRIBSTAT SEMICOLON .)


state 32

    (20) STATEMENT -> PRINTSTAT SEMICOLON .

    $end            reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    BREAK           reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    PRINT           reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    READ            reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RETURN          reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IF              reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FOR             reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    INT             reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    FLOAT           reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    STRING          reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    IDENT           reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    LCURLYBRACKET   reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    RCURLYBRACKET   reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)
    ELSE            reduce using rule 20 (STATEMENT -> PRINTSTAT SEMICOLON .)


state 33

    (21) STATEMENT -> READSTAT SEMICOLON .

    $end            reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    BREAK           reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    PRINT           reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    READ            reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    RETURN          reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    IF              reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    FOR             reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    INT             reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    FLOAT           reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    STRING          reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    IDENT           reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    LCURLYBRACKET   reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    RCURLYBRACKET   reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)
    ELSE            reduce using rule 21 (STATEMENT -> READSTAT SEMICOLON .)


state 34

    (22) STATEMENT -> RETURNSTAT SEMICOLON .

    $end            reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    BREAK           reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    SEMICOLON       reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    PRINT           reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    READ            reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    RETURN          reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    IF              reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    FOR             reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    INT             reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    FLOAT           reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    STRING          reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    IDENT           reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    LCURLYBRACKET   reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    RCURLYBRACKET   reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)
    ELSE            reduce using rule 22 (STATEMENT -> RETURNSTAT SEMICOLON .)


state 35

    (26) STATEMENT -> BREAK SEMICOLON .
